--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <img src="bluescreen.png" class="background">
+    <div onclick="window.location.href = 'secret-entrance/index.html';" style="position: fixed; display: block; width: 100px; height: 100px; bottom: 100px"><a href="secret-entrance/index.html"></a></div>
 </body>
 </html>
 <!--<div class="background">
