--- a/secret-entrance/index.html
+++ b/secret-entrance/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>Sketchiest Website Around</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     <table>
+      <tr class="menubar">
+        <td><div><a href="../index.html">Your computer has a virus! Click to fix.</a></div></td>
+        <td><div><a href="../downloads/index.html">Downloads</a></div></td>
+      </tr>
       <tr>
         <td><img src="pink.gif"></td>
         <td class="main"><h1 style="position: absolute; top: 0px;">Welcome, to the real website</h1></td>
@@ -16,6 +20,5 @@
     <div class="body">
     <p><br>I wanted to make a website, one that reminded me of the greatness of the beginning of the interwebs. One which had the disgusting format, of the 90's. I belive i completed that goal, as well as making my website one that I could call my own. One that I could put all my stuff on because why the hell not?</p>
     </div>
-    <div><a href="../index.html">Click to fix computer<a></div>
 </body>
 </html>
