--- a/downloads/index.html
+++ b/downloads/index.html
@@ -8,13 +8,13 @@
 <body>
     <table>
       <tr>
-        <td><img src="../secret-entrance/pink.gif"></td>
+        <td><img class="header-image" src="floppy-spinning.gif"></td>
         <td class="main"><h1 style="position: absolute; top: 0px;">Downloads Page</h1></td>
-        <td><img src="../secret-entrance/pink.gif"></td>
+        <td><img class="header-image" src="floppy-spinning.gif"></td>
       </tr>
     </table>
     <div class="body">
-    <p><br>Here, you can download malware and other technological weapons I have crafted. Many of these are Harmless and do not do major damage</p>
+    <h2><br>Here, you can download malware and other technological weapons I have crafted. Many of these are Harmless and do not do major damage<br>Disclaimer: I do not recommend that you download or run any of these files. Any inconveniences caused to your self or any other party are the responsibility of the party who downloaded the file from this site. All intelectual property here is public domain and may be modified as you see fit; I am not to be held accountable for any consequences, direct or indirect of doing so. Neither I, the creator, nor the github hosting service claim any responsibility for any effects of any data viewed or downloaded from this site. Please do not share download links individually or circumvent this disclaimer in any way, in doing so you claim all responsibility for any effects, direct or indirectly caused by doing so. Thank you.</h2>
     </div>
     <table border=5>
         <tbody>
@@ -23,7 +23,7 @@
                   <a href="../secret-entrance/pink.gif">Pink guy</a>
                 </td>
                 <td class="description">
-                  <p>Pink guy dancing as a gif</p>
+                  <p>Pink guy dancing as a gif. I know you want it, I can feel your envy of my dank gif</p>
                 </td>
             </tr>
             <tr>
@@ -52,7 +52,7 @@
             </tr>
             <tr>
                 <td class="link">
-                  <a href="Bomb.zip">Bomb</a>
+                  <a href="bomb.zip">Bomb</a>
                 </td>
                 <td class="description">
                   <p>Allah Akbar</p>
