--- a/secret-entrance/index.html
+++ b/secret-entrance/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <table>
-      <tr class="menubar">
+      <tr height="100px" class="menubar">
         <td><div><a href="../index.html">Your computer has a virus! Click to fix.</a></div></td>
-        <td><div><a href="../downloads/index.html">Downloads</a></div></td>
+        <td><div><a height="100px" href="../downloads/index.html">Downloads</a></div></td>
       </tr>
       <tr>
         <td><img src="pink.gif"></td>
