--- a/secret-entrance/index.html
+++ b/secret-entrance/index.html
@@ -20,5 +20,8 @@
     <div class="body">
     <p><br>I wanted to make a website, one that reminded me of the greatness of the beginning of the interwebs. One which had the disgusting format, of the 90's. I belive i completed that goal, as well as making my website one that I could call my own. One that I could put all my stuff on because why the hell not?</p>
     </div>
+    <img src="" id="ad" style="height: 350px; width: auto; margin-top: 100px;">
+    <!--<script src="https://pro-h3kr.github.io/ads/ads.js"></script>-->
+    <script src="../ads/ads.js"></script>
 </body>
 </html>
