--- a/secret-entrance/index.html
+++ b/secret-entrance/index.html
@@ -16,6 +16,11 @@
         <td class="main"><h1 style="position: absolute; top: 0px;">Welcome, to the real website</h1></td>
         <td><img src="pink.gif"></td>
       </tr>
+      <tr>
+        <td>
+          <a href="../story-of-the-website/index.html">story-of-the-website</a>
+        </td>
+      </tr>
     </table>
     <div class="body">
     <p><br>I wanted to make a website, one that reminded me of the greatness of the beginning of the interwebs. One which had the disgusting format, of the 90's. I belive i completed that goal, as well as making my website one that I could call my own. One that I could put all my stuff on because why the hell not?</p>
