--- a/downloads/index.html
+++ b/downloads/index.html
@@ -125,6 +125,14 @@
               <p>All wifi passwords. Just all of them.</p>
             </td>
         </tr>
+        <td class="link">
+          <a href="insult generator.zip">Insults</a>
+        </td>
+        <td class="description">
+          <p>Not malware, creates insults</p>
+        </td>
+    </tr>
+  </tr>
         </tbody>
     </table>
     <a href="../secret-entrance/index.html">Back</a>
