--- a/secret-entrance/index.html
+++ b/secret-entrance/index.html
@@ -11,6 +11,7 @@
         <td><div><a href="../index.html">Your computer has a virus! Click to fix.</a></div></td>
         <td><div><a height="100px" href="../downloads/index.html">Downloads</a></div></td>
         <td><div><a height="100px" href="../windows/index.html">Windows</a></div></td>
+        <td><div><a height="100px" href="../software/index.html">software</a></div></td>
       </tr>
       <tr>
         <td><img src="pink.gif"></td>
